plugins {
    id 'net.minecraftforge.gradle' version '[6.0.24,6.2)'
    id 'com.diffplug.spotless' version '7.0.2'
    id 'maven-publish'
}

version = mod_version + '-forge-' + g1_jar_suffix
group = mod_group_id

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

repositories {
    mavenCentral()
    maven { url = 'https://maven.minecraftforge.net/' }
    maven { url = 'https://maven.aliyun.com/repository/public' }
    maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
    flatDir { dirs 'libs' }
}

minecraft {
    mappings channel: 'official', version: '1.20.1'

    runs {
        configureEach {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            property 'mixin.env.remapRefMap', 'true'
            property 'mixin.env.refMapRemappingFile', "${project.buildDir}/createSrgToMcp/output.srg"
            args '--mixin.config', 'mapsyncer.mixins.json'
        }

        client {
            property 'forge.enabledGameTestNamespaces', mod_id
        }

        server {
            property 'forge.enabledGameTestNamespaces', mod_id
            args '--nogui'
        }
    }
}

dependencies {
    minecraft "net.minecraftforge:forge:${minecraft_1201_version}-${forge_1201_version}"

    implementation 'org.slf4j:slf4j-api:2.0.9'

    compileOnly fg.deobf('xaeroworldmap-forge-1.20.1:xaeroworldmap-forge-1.20.1:1.45.0')
    runtimeOnly fg.deobf('xaeroworldmap-forge-1.20.1:xaeroworldmap-forge-1.20.1:1.45.0')

    compileOnly 'org.spongepowered:mixin:0.8.5'
    compileOnly 'org.ow2.asm:asm:9.7'

    runtimeOnly fg.deobf('packet_profiler:packet_profiler:1.0.0')
}

jar {
    manifest {
        attributes 'MixinConfigs': 'mapsyncer.mixins.json'
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs += ['-Xlint:all']
}

processResources {
    inputs.property "version", project.version
    inputs.property "minecraft_range_forge", g1_minecraft_range_forge

    filesMatching("META-INF/mods.toml") {
        expand "version": project.version,
                "minecraft_range_forge": g1_minecraft_range_forge
    }
}

spotless {
    java {
        palantirJavaFormat('2.50.0')
    }
}

tasks.named('jarJar') {
    enabled = false
}
